<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/petshop"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/petshop_woof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toTopOf="@+id/profile_img" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="-105dp"
        android:text="@string/be_care_be_woof" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="-210dp"
        android:text="@string/petshop_woof_berdiri_sejak_2020_kami_memiliki_layanan_untuk_merawat_peliharaan_anda" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-300dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:enabled="true"
        android:text="@string/contact_us" />


</LinearLayout>